# alttabway

./: Cargo.toml  README.md
.github/workflows/: check.yml  publish.yml
src/: config_worker.rs  daemon.rs  geometry_ipc.rs  geometry_provider.rs  geometry_worker.rs  gui.rs  gui_state.rs  icon_helper.rs  image_resizer.rs  ipc.rs  lib.rs  main.rs  renderer.rs  timer.rs  wayland_client.rs  wayland_client_event.rs  wgpu_wrapper.rs
