[package]
name = "alttabway"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
smithay-client-toolkit = "0.20.0"
wayland-client = "0.31.11"
wayland-backend = { version = "0.3.11", features = ["client_system"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
egui = "0.33.3"
egui-wgpu = "0.33.3" 
wgpu = { version = "*", default-features = false, features = ["vulkan"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync", "net"] }
raw-window-handle = "0.6"
clap = { version = "4.5.53", features = ["derive"] }
