[package]
name = "alttabway"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
smithay-client-toolkit = "0.20.0"
wayland-backend = { version = "0.3.11", features = ["client_system"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
egui = { version = "0.33.3", features = ["color-hex"] }
egui-wgpu = "0.33.3"
wgpu = { version = "27.0.1", default-features = false, features = ["vulkan"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync", "net", "time"] }
raw-window-handle = "0.6"
clap = { version = "4.5.53", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-util = { version = "0.7.18", features = ["codec"] }
rkyv = "0.8.13"
futures-util = { version = "0.3.31", features = ["sink"] }
fast_image_resize = "6.0.0"
